[package]
name = "unitt"
version = "3.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.37", features = ["derive", "unicode", "wrap_help"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt", "test-util", "process"] }
wild = "2.2.1"
