[package]
name = "unitt"
description = "Lean unit testing tool for Arturo"
version = "3.0.0"
license = "MIT"
authors = ["RickBarretto"]
homepage = "https://unitt.pkgr.art"
repository = "https://github.com/rickbarretto/unitt"
keywords = ["arturo", "testing", "unit-testing", "cli"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[dependencies]
clap = { version = "4.5.37", features = ["derive", "unicode", "wrap_help"] }
glob = "0.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt", "test-util", "process"] }
toml = "0.8.22"
wild = "2.2.1"
